# ecr-scan-reporter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  ecr-scan-sample-event.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.cicd/: build_images.yml  buildspec.yml  buildspec_docs.yml  buildspec_layer.yml  codebuild_release.yml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.install/: layer-macro-sar.yaml  layer_template.yaml
docker/: cli.Dockerfile
docs/: conf.py  ecr_scan_reporter.rst  index.rst  install.rst  installation.rst  modules.rst  usage.rst  workflow.rst
ecr_scan_reporter/: __init__.py  cli.py  common.py  ecr_scan_reporter.py  images_scanner.py  lambda_functions.py  repos_scanner.py  services_scanner.py
tests/: __init__.py  test_ecr_scan_reporter.py  test_findings.py
tests/placebos/ecr/: api.ecr.DescribeImages_1.json  api.ecr.DescribeImages_2.json  api.ecr.DescribeRepositories_1.json  api.ecr.DescribeRepositories_2.json  api.ecr.DescribeRepositories_3.json  api.ecr.ListImages_1.json  api.ecr.ListImages_2.json  api.ecr.StartImageScan_1.json  api.ecr.StartImageScan_10.json  api.ecr.StartImageScan_11.json  api.ecr.StartImageScan_12.json  api.ecr.StartImageScan_13.json  api.ecr.StartImageScan_14.json  api.ecr.StartImageScan_15.json  api.ecr.StartImageScan_16.json  api.ecr.StartImageScan_17.json  api.ecr.StartImageScan_18.json  api.ecr.StartImageScan_19.json  api.ecr.StartImageScan_2.json  api.ecr.StartImageScan_20.json  api.ecr.StartImageScan_21.json  api.ecr.StartImageScan_22.json  api.ecr.StartImageScan_23.json  api.ecr.StartImageScan_24.json  api.ecr.StartImageScan_25.json  api.ecr.StartImageScan_26.json  api.ecr.StartImageScan_27.json  api.ecr.StartImageScan_28.json  api.ecr.StartImageScan_29.json  api.ecr.StartImageScan_3.json  api.ecr.StartImageScan_30.json  api.ecr.StartImageScan_4.json  api.ecr.StartImageScan_5.json  api.ecr.StartImageScan_6.json  api.ecr.StartImageScan_7.json  api.ecr.StartImageScan_8.json  api.ecr.StartImageScan_9.json
