[tool.poetry]
name = "ecr_scan_reporter"
version = "0.4.5"
description = "Stay on top of your docker images security vulnerabilities in AWS ECR"
authors = ["John Preston <john@compose-x.io>"]
license = "MPL-2.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
readme = "README.rst"
keywords=["ecr_scan_reporter, aws-ecr, security, vulnerabilities"]
include = [
    "LICENSE",
    "MANIFEST.in"
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.54"
pytz = "^2021.3"
compose-x-common = "^0.4.2"

[tool.poetry.dev-dependencies]
sphinx-material = "^0.0.34"
Sphinx = "^4.4.0"
black = "^21.12b0"
isort = "^5.10.1"
tbump = "6.4.0"
placebo = "^0.9.0"
behave = "^1.2.6"
pytest = "^6.2.5"
flake8 = "^3.9.2"
pre-commit = "^2.17.0"
tox = "^3.24.5"

[tool.poetry.scripts]
ecr_scan_reporter = "ecr_scan_reporter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = "kelvin"

[tool.tbump]
github_url = "https://github.com/compose-x/ecr-scan-reporter"

[tool.tbump.version]
current = "0.4.5"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "ecr_scan_reporter/__init__.py"
