[tool.poetry]
name = "ecr_scan_reporter"
version = "0.4.8"
description = "Stay on top of your docker images security vulnerabilities in AWS ECR"
authors = ["John Preston <john@compose-x.io>"]
license = "MPL-2.0"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
readme = "README.rst"
keywords=["aws-ecr", "security", "vulnerabilities"]
include = [
    "LICENSE",
    "MANIFEST.in"
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.22"
pytz = "^2023.3"
compose-x-common = "^1.2"

[tool.poetry.dev-dependencies]
sphinx-material = "^0.0.35"
Sphinx = "^4.5.0"
black = "^23.3"
isort = "^5.12"
tbump = "^6.7,<7.0"
placebo = "<1.0"
behave = "^1.2.6"
pytest = "^7.1"
pre-commit = "^3.2"

[tool.poetry.scripts]
ecr_scan_reporter = "ecr_scan_reporter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = "kelvin"

[tool.tbump]
github_url = "https://github.com/compose-x/ecr-scan-reporter"

[tool.tbump.version]
current = "0.4.8"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "ecr_scan_reporter/__init__.py"
